--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             translate="no"
             aria-label="Video Player"
           >
+           <video id="video" style="width: 100%; height: 100%;" controls=""></video>
             <video
               class="vjs-tech"
               id="vjs_video_3_html5_api"
