--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             translate="no"
             aria-label="Video Player"
           >
-           <video id="video" style="width: 100%; height: 100%;" controls=""></video>
-            <video
+           <!-- <video id="video" style="width: 100%; height: 100%;" controls=""></video> -->
+            <!-- <video
               class="vjs-tech"
               id="vjs_video_3_html5_api"
               tabindex="-1"
@@ -62,7 +62,7 @@
               autoplay=""
               src="blob:https://herdypad.github.io/m3u8player2/198dc133-a462-41a4-b170-1fb2d6cd3203"
               crossorigin="anonymous"
-            ></video
+            ></video -->
             ><!----><picture
               class="vjs-poster vjs-hidden"
               tabindex="-1"
